Closed Bug 1485616 Opened 6 years ago Closed 5 years ago

[Wayland] New dialogs/windows are not rendered with WebRender/OpenGL acceleration enabled

Categories

(Core :: Widget: Gtk, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox63 --- disabled
firefox64 --- disabled
firefox65 --- fixed
firefox66 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Steps to reproduce:

0. Set layers.acceleration.force-enabled to true
1. start firefox-wayland
2. open "Customize…" from sandwich menu, uncheck "Title Bar"
3. firefox window is blank
I think I'm seeing this in the latest nightly. With layers.acceleration.force-enabled (or WebRender, but that just enables HW compositing), I get a blank (white) window on start-up.

It's a little weird, since I think it doesn't always happen after enabling the preference, but after one more restart, or something like that. But I can reliably reproduce this. I'm on Arch / Gnome Shell / Wayland.

By the way, thanks for all your work on Wayland support!
The first window (or group of session windows with OpenGL) is rendered correctly but all subsequent new dialogs/windows fail, appearing blank with WebRender or not appearing at all with OpenGL. Setting browser.startup.blankWindow = false (Bug 1336227) causes all windows to fail to render including the first.
Summary: [Wayland] Toogling titlebar when EGL acceleration is enabled results to blank page → [Wayland] New dialogs/windows are not rendered with WebRender/OpenGL acceleration enabled
See Also: → 1508082
I believe it's dupe of Bug 1500415.
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → DUPLICATE
I was wrong, it's a separated issue, we draw too early.
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
Status: REOPENED → ASSIGNED
with this attachment manually applied, I didn't see difference, the new windows are still blank.

layers.acceleration.force-enabled=true
gfx.webrender.all=true
when:

layers.acceleration.force-enabled=true
gfx.webrender.all=false

The new windows is ok.
(In reply to v from comment #11)
> when:
> 
> layers.acceleration.force-enabled=true
> gfx.webrender.all=false
> 
> The new windows is ok.

Can you attach your about:support when this working setup is enabled? Thanks.
Flags: needinfo?(v)
Application Basics
------------------

Name: Firefox
Version: 65.0a1
Build ID: 20181205074826
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:65.0) Gecko/20100101 Firefox/65.0
OS: Linux 4.19.6-1-ck-skylake
Multiprocess Windows: 1/1 (Enabled by default)
Web Content Processes: 10/8
Enterprise Policies: Inactive
Google Key: Found
Mozilla Location Service Key: Found
Safe Mode: false

Crash Reports for the Last 3 Days
---------------------------------

All Crash Reports (including 4 pending crashes in the given time range)     Firefox Features
--------------------------------------------------------------------------------------------

Name: Firefox Screenshots
Version: 35.0.0
ID: screenshots@mozilla.org

Name: Form Autofill
Version: 1.0
ID: formautofill@mozilla.org

Name: Web Compat
Version: 3.0.0
ID: webcompat@mozilla.org

Name: WebCompat Reporter
Version: 1.1.0
ID: webcompat-reporter@mozilla.org

Extensions
----------

Name: Auto Tab Discard
Version: 0.2.9
Enabled: true
ID: {c2c003ee-bd69-42a2-b0e9-6f34222cb046}

Name: Firefox Multi-Account Containers
Version: 6.0.1
Enabled: true
ID: @testpilot-containers

Name: iMacros for Firefox
Version: 10.0.2.1450
Enabled: true
ID: {81BF1D23-5F17-408D-AC6B-BD6DF7CAF670}

Name: LastPass: Free Password Manager
Version: 4.19.0.5
Enabled: true
ID: support@lastpass.com

Name: MetaMask
Version: 5.1.0
Enabled: true
ID: webextension@metamask.io

Name: Saka Key
Version: 1.25.5
Enabled: true
ID: {46104586-98c3-407e-a349-290c9ff3594d}

Name: Toby for Chrome
Version: 0.4.12
Enabled: true
ID: ext-self@gettoby.com

Name: Vimium
Version: 1.64
Enabled: false
ID: {d7742d87-e61d-4b78-b8a1-b469842139fa}

Security Software
----------------- Type:

Type:

Type:

Graphics
--------

Features
Compositing: OpenGL
Asynchronous Pan/Zoom: wheel input enabled; touch input enabled; scrollbar drag enabled; keyboard enabled; autoscroll enabled
WebGL 1 Driver WSI Info: EGL_VENDOR: Mesa Project EGL_VERSION: 1.4 (DRI2) EGL_EXTENSIONS: EGL_ANDROID_blob_cache EGL_ANDROID_native_fence_sync EGL_EXT_buffer_age EGL_EXT_create_context_robustness EGL_EXT_image_dma_buf_import EGL_EXT_image_dma_buf_import_modifiers EGL_EXT_swap_buffers_with_damage EGL_IMG_context_priority EGL_KHR_config_attribs EGL_KHR_create_context EGL_KHR_create_context_no_error EGL_KHR_fence_sync EGL_KHR_get_all_proc_addresses EGL_KHR_gl_colorspace EGL_KHR_gl_renderbuffer_image EGL_KHR_gl_texture_2D_image EGL_KHR_gl_texture_3D_image EGL_KHR_gl_texture_cubemap_image EGL_KHR_image_base EGL_KHR_no_config_context EGL_KHR_reusable_sync EGL_KHR_surfaceless_context EGL_KHR_swap_buffers_with_damage EGL_EXT_pixel_format_float EGL_KHR_wait_sync EGL_MESA_configless_context EGL_MESA_drm_image EGL_MESA_image_dma_buf_export EGL_WL_bind_wayland_display EGL_WL_create_wayland_buffer_from_image EGL_EXTENSIONS(nullptr): EGL_EXT_platform_base EGL_KHR_client_get_all_proc_addresses EGL_EXT_client_extensions EGL_KHR_debug EGL_EXT_platform_wayland EGL_EXT_platform_x11 EGL_MESA_platform_gbm EGL_MESA_platform_surfaceless
WebGL 1 Driver Renderer: Intel Open Source Technology Center -- Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2)
WebGL 1 Driver Version: OpenGL ES 3.2 Mesa 18.2.6
WebGL 1 Driver Extensions: GL_EXT_blend_minmax GL_EXT_multi_draw_arrays GL_EXT_texture_filter_anisotropic GL_EXT_occlusion_query_boolean GL_EXT_texture_compression_dxt1 GL_EXT_texture_format_BGRA8888 GL_OES_compressed_ETC1_RGB8_texture GL_OES_depth24 GL_OES_element_index_uint GL_OES_fbo_render_mipmap GL_OES_mapbuffer GL_OES_rgb8_rgba8 GL_OES_standard_derivatives GL_OES_stencil8 GL_OES_texture_3D GL_OES_texture_float GL_OES_texture_float_linear GL_OES_texture_half_float GL_OES_texture_half_float_linear GL_OES_texture_npot GL_OES_vertex_half_float GL_EXT_texture_sRGB_decode GL_OES_EGL_image GL_OES_depth_texture GL_OES_packed_depth_stencil GL_EXT_texture_type_2_10_10_10_REV GL_OES_get_program_binary GL_APPLE_texture_max_level GL_EXT_discard_framebuffer GL_EXT_read_format_bgra GL_EXT_frag_depth GL_NV_fbo_color_attachments GL_OES_EGL_image_external GL_OES_EGL_sync GL_OES_vertex_array_object GL_OES_viewport_array GL_ANGLE_texture_compression_dxt3 GL_ANGLE_texture_compression_dxt5 GL_EXT_robustness GL_EXT_texture_rg GL_EXT_unpack_subimage GL_NV_draw_buffers GL_NV_read_buffer GL_NV_read_depth GL_NV_read_depth_stencil GL_NV_read_stencil GL_EXT_draw_buffers GL_EXT_map_buffer_range GL_KHR_debug GL_KHR_robustness GL_KHR_texture_compression_astc_ldr GL_OES_depth_texture_cube_map GL_OES_required_internalformat GL_OES_surfaceless_context GL_EXT_color_buffer_float GL_EXT_separate_shader_objects GL_EXT_shader_framebuffer_fetch GL_EXT_shader_integer_mix GL_EXT_tessellation_point_size GL_EXT_tessellation_shader GL_INTEL_conservative_rasterization GL_INTEL_performance_query GL_ANDROID_extension_pack_es31a GL_EXT_base_instance GL_EXT_compressed_ETC1_RGB8_sub_texture GL_EXT_copy_image GL_EXT_draw_buffers_indexed GL_EXT_draw_elements_base_vertex GL_EXT_gpu_shader5 GL_EXT_polygon_offset_clamp GL_EXT_primitive_bounding_box GL_EXT_shader_io_blocks GL_EXT_texture_border_clamp GL_EXT_texture_buffer GL_EXT_texture_cube_map_array GL_EXT_texture_norm16 GL_KHR_blend_equation_advanced GL_KHR_blend_equation_advanced_coherent GL_KHR_context_flush_control GL_KHR_robust_buffer_access_behavior GL_NV_image_formats GL_OES_copy_image GL_OES_draw_buffers_indexed GL_OES_draw_elements_base_vertex GL_OES_gpu_shader5 GL_OES_primitive_bounding_box GL_OES_sample_shading GL_OES_sample_variables GL_OES_shader_io_blocks GL_OES_shader_multisample_interpolation GL_OES_tessellation_point_size GL_OES_tessellation_shader GL_OES_texture_border_clamp GL_OES_texture_buffer GL_OES_texture_cube_map_array GL_OES_texture_stencil8 GL_OES_texture_storage_multisample_2d_array GL_OES_texture_view GL_EXT_blend_func_extended GL_EXT_buffer_storage GL_EXT_geometry_point_size GL_EXT_geometry_shader GL_EXT_shader_samples_identical GL_KHR_no_error GL_KHR_texture_compression_astc_sliced_3d GL_OES_EGL_image_external_essl3 GL_OES_geometry_point_size GL_OES_geometry_shader GL_OES_shader_image_atomic GL_EXT_clip_cull_distance GL_EXT_disjoint_timer_query GL_MESA_shader_integer_functions GL_EXT_shader_framebuffer_fetch_non_coherent GL_MESA_framebuffer_flip_y
WebGL 1 Extensions: ANGLE_instanced_arrays EXT_blend_minmax EXT_color_buffer_half_float EXT_frag_depth EXT_sRGB EXT_texture_filter_anisotropic EXT_disjoint_timer_query OES_element_index_uint OES_standard_derivatives OES_texture_float OES_texture_float_linear OES_texture_half_float OES_texture_half_float_linear OES_vertex_array_object WEBGL_color_buffer_float WEBGL_compressed_texture_astc WEBGL_compressed_texture_etc WEBGL_compressed_texture_etc1 WEBGL_compressed_texture_s3tc WEBGL_debug_renderer_info WEBGL_debug_shaders WEBGL_depth_texture WEBGL_draw_buffers WEBGL_lose_context
WebGL 2 Driver WSI Info: EGL_VENDOR: Mesa Project EGL_VERSION: 1.4 (DRI2) EGL_EXTENSIONS: EGL_ANDROID_blob_cache EGL_ANDROID_native_fence_sync EGL_EXT_buffer_age EGL_EXT_create_context_robustness EGL_EXT_image_dma_buf_import EGL_EXT_image_dma_buf_import_modifiers EGL_EXT_swap_buffers_with_damage EGL_IMG_context_priority EGL_KHR_config_attribs EGL_KHR_create_context EGL_KHR_create_context_no_error EGL_KHR_fence_sync EGL_KHR_get_all_proc_addresses EGL_KHR_gl_colorspace EGL_KHR_gl_renderbuffer_image EGL_KHR_gl_texture_2D_image EGL_KHR_gl_texture_3D_image EGL_KHR_gl_texture_cubemap_image EGL_KHR_image_base EGL_KHR_no_config_context EGL_KHR_reusable_sync EGL_KHR_surfaceless_context EGL_KHR_swap_buffers_with_damage EGL_EXT_pixel_format_float EGL_KHR_wait_sync EGL_MESA_configless_context EGL_MESA_drm_image EGL_MESA_image_dma_buf_export EGL_WL_bind_wayland_display EGL_WL_create_wayland_buffer_from_image EGL_EXTENSIONS(nullptr): EGL_EXT_platform_base EGL_KHR_client_get_all_proc_addresses EGL_EXT_client_extensions EGL_KHR_debug EGL_EXT_platform_wayland EGL_EXT_platform_x11 EGL_MESA_platform_gbm EGL_MESA_platform_surfaceless
WebGL 2 Driver Renderer: Intel Open Source Technology Center -- Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2)
WebGL 2 Driver Version: OpenGL ES 3.2 Mesa 18.2.6
WebGL 2 Driver Extensions: GL_EXT_blend_minmax GL_EXT_multi_draw_arrays GL_EXT_texture_filter_anisotropic GL_EXT_occlusion_query_boolean GL_EXT_texture_compression_dxt1 GL_EXT_texture_format_BGRA8888 GL_OES_compressed_ETC1_RGB8_texture GL_OES_depth24 GL_OES_element_index_uint GL_OES_fbo_render_mipmap GL_OES_mapbuffer GL_OES_rgb8_rgba8 GL_OES_standard_derivatives GL_OES_stencil8 GL_OES_texture_3D GL_OES_texture_float GL_OES_texture_float_linear GL_OES_texture_half_float GL_OES_texture_half_float_linear GL_OES_texture_npot GL_OES_vertex_half_float GL_EXT_texture_sRGB_decode GL_OES_EGL_image GL_OES_depth_texture GL_OES_packed_depth_stencil GL_EXT_texture_type_2_10_10_10_REV GL_OES_get_program_binary GL_APPLE_texture_max_level GL_EXT_discard_framebuffer GL_EXT_read_format_bgra GL_EXT_frag_depth GL_NV_fbo_color_attachments GL_OES_EGL_image_external GL_OES_EGL_sync GL_OES_vertex_array_object GL_OES_viewport_array GL_ANGLE_texture_compression_dxt3 GL_ANGLE_texture_compression_dxt5 GL_EXT_robustness GL_EXT_texture_rg GL_EXT_unpack_subimage GL_NV_draw_buffers GL_NV_read_buffer GL_NV_read_depth GL_NV_read_depth_stencil GL_NV_read_stencil GL_EXT_draw_buffers GL_EXT_map_buffer_range GL_KHR_debug GL_KHR_robustness GL_KHR_texture_compression_astc_ldr GL_OES_depth_texture_cube_map GL_OES_required_internalformat GL_OES_surfaceless_context GL_EXT_color_buffer_float GL_EXT_separate_shader_objects GL_EXT_shader_framebuffer_fetch GL_EXT_shader_integer_mix GL_EXT_tessellation_point_size GL_EXT_tessellation_shader GL_INTEL_conservative_rasterization GL_INTEL_performance_query GL_ANDROID_extension_pack_es31a GL_EXT_base_instance GL_EXT_compressed_ETC1_RGB8_sub_texture GL_EXT_copy_image GL_EXT_draw_buffers_indexed GL_EXT_draw_elements_base_vertex GL_EXT_gpu_shader5 GL_EXT_polygon_offset_clamp GL_EXT_primitive_bounding_box GL_EXT_shader_io_blocks GL_EXT_texture_border_clamp GL_EXT_texture_buffer GL_EXT_texture_cube_map_array GL_EXT_texture_norm16 GL_KHR_blend_equation_advanced GL_KHR_blend_equation_advanced_coherent GL_KHR_context_flush_control GL_KHR_robust_buffer_access_behavior GL_NV_image_formats GL_OES_copy_image GL_OES_draw_buffers_indexed GL_OES_draw_elements_base_vertex GL_OES_gpu_shader5 GL_OES_primitive_bounding_box GL_OES_sample_shading GL_OES_sample_variables GL_OES_shader_io_blocks GL_OES_shader_multisample_interpolation GL_OES_tessellation_point_size GL_OES_tessellation_shader GL_OES_texture_border_clamp GL_OES_texture_buffer GL_OES_texture_cube_map_array GL_OES_texture_stencil8 GL_OES_texture_storage_multisample_2d_array GL_OES_texture_view GL_EXT_blend_func_extended GL_EXT_buffer_storage GL_EXT_geometry_point_size GL_EXT_geometry_shader GL_EXT_shader_samples_identical GL_KHR_no_error GL_KHR_texture_compression_astc_sliced_3d GL_OES_EGL_image_external_essl3 GL_OES_geometry_point_size GL_OES_geometry_shader GL_OES_shader_image_atomic GL_EXT_clip_cull_distance GL_EXT_disjoint_timer_query GL_MESA_shader_integer_functions GL_EXT_shader_framebuffer_fetch_non_coherent GL_MESA_framebuffer_flip_y
WebGL 2 Extensions: EXT_color_buffer_float EXT_texture_filter_anisotropic EXT_disjoint_timer_query OES_texture_float_linear WEBGL_compressed_texture_astc WEBGL_compressed_texture_etc WEBGL_compressed_texture_etc1 WEBGL_compressed_texture_s3tc WEBGL_debug_renderer_info WEBGL_debug_shaders WEBGL_lose_context
Off Main Thread Painting Enabled: true
Off Main Thread Painting Worker Count: 3
GPU #1
Active: Yes
Description: Intel Open Source Technology Center -- Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2)
Vendor ID: Intel Open Source Technology Center
Device ID: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2)
Driver Version: 3.0 Mesa 18.2.6

Diagnostics
AzureCanvasAccelerated: 1
AzureCanvasBackend: skia
AzureContentBackend: skia
AzureFallbackCanvasBackend: none
CairoUseXRender: 0
Device Reset: Trigger Device Reset
Decision Log
HW_COMPOSITING:
blocked by default: Acceleration blocked by platform
force_enabled by user: Force-enabled by pref
OPENGL_COMPOSITING:
force_enabled by user: Force-enabled by pref
WEBRENDER:
opt-in by default: WebRender is an opt-in feature
blocked by runtime: Qualified enable blocked
WEBRENDER_QUALIFIED:
blocked by env: No qualified hardware




Media
-----

Audio Backend: remote
Max Channels: 2
Preferred Sample Rate: 44100
Output Devices
Name: Group
Built-in Audio Analog Stereo: /devices/pci0000:00/0000:00:1f.3/sound/card0
Input Devices
Name: Group
Monitor of Built-in Audio Analog Stereo: /devices/pci0000:00/0000:00:1f.3/sound/card0
Built-in Audio Analog Stereo: /devices/pci0000:00/0000:00:1f.3/sound/card0

Important Modified Preferences
------------------------------

accessibility.typeaheadfind.flashBar: 0
browser.cache.disk.capacity: 1048576
browser.cache.disk.filesystem_reported: 1
browser.cache.disk.hashstats_reported: 1
browser.cache.disk.smart_size.first_run: false
browser.link.open_newwindow.restriction: 0
browser.sessionstore.interval: 60000
browser.sessionstore.upgradeBackup.latestBuildID: 20181205074826
browser.startup.homepage_override.buildID: 20181205074826
browser.startup.homepage_override.mstone: 65.0a1
browser.tabs.closeWindowWithLastTab: false
browser.urlbar.matchBuckets: general:5,suggestion:Infinity
browser.urlbar.placeholderName: Google
browser.urlbar.timesBeforeHidingSuggestionsHint: 0
dom.forms.autocomplete.formautofill: true
dom.push.userAgentID: 7b0f1b2c0d0a41dbb1544dfa360cf27c
extensions.lastAppVersion: 65.0a1
font.internaluseonly.changed: false
font.name.sans-serif.x-western: Fira Sans
gfx.canvas.azure.accelerated: true
layers.acceleration.force-enabled: true
media.benchmark.vp9.fps: 75
media.benchmark.vp9.versioncheck: 5
media.gmp-gmpopenh264.abi: x86_64-gcc3
media.gmp-gmpopenh264.lastUpdate: 1543817884
media.gmp-gmpopenh264.version: 1.7.1
media.gmp-manager.buildID: 20181205074826
media.gmp-manager.lastCheck: 1544439531
media.gmp.storage.version.observed: 1
network.predictor.cleaned-up: true
network.tcp.tcp_fastopen_enable: true
places.database.lastMaintenance: 1543819243
places.history.expiration.transient_current_max_pages: 129775
plugin.disable_full_page_plugin_for_types: application/pdf
privacy.donottrackheader.enabled: true
privacy.sanitize.pending: [{"id":"newtab-container","itemsToClear":[],"options":{}}]
privacy.trackingprotection.enabled: true
privacy.userContext.extension: @testpilot-containers
security.sandbox.content.tempDirSuffix: 5bcb2bc7-b3be-4826-8698-3857ac98b69c
security.sandbox.plugin.tempDirSuffix: 12c7fea4-415c-479d-b324-4853adc74010
services.sync.declinedEngines:
services.sync.engine.addresses.available: true
services.sync.engine.bookmarks.validation.lastTime: 1544476663
services.sync.engine.creditcards.available: true
services.sync.engine.passwords.validation.lastTime: 1544476663
services.sync.engine.prefs.modified: false
services.sync.lastPing: 1544476658
services.sync.lastSync: Tue Dec 11 2018 07:59:50 GMT+0800 (CST)
signon.importedFromSqlite: true
signon.rememberSignons: false
storage.vacuum.last.index: 1
storage.vacuum.last.places.sqlite: 1543819239

Important Locked Preferences
----------------------------

Places Database
---------------

JavaScript
----------

Incremental GC: true

Accessibility
-------------

Activated: false
Prevent Accessibility: 0

Library Versions
----------------

NSPR
Expected minimum version: 4.20
Version in use: 4.20

NSS
Expected minimum version: 3.40.1
Version in use: 3.40.1

NSSSMIME
Expected minimum version: 3.40.1
Version in use: 3.40.1

NSSSSL
Expected minimum version: 3.40.1
Version in use: 3.40.1

NSSUTIL
Expected minimum version: 3.40.1
Version in use: 3.40.1

Sandbox
-------

Seccomp-BPF (System Call Filtering): true
Seccomp Thread Synchronization: true
User Namespaces for privileged processes: true
User Namespaces: false
Content Process Sandboxing: true
Media Plugin Sandboxing: true
Content Process Sandbox Level: 4
Effective Content Process Sandbox Level: 4

Rejected System Calls
---------------------

Internationalization & Localization
-----------------------------------

Application Settings
Requested Locales: ["en-US"]
Available Locales: ["en-US"]
App Locales: ["en-US","und"]
Regional Preferences: ["en-US"]
Default Locale: "und"
Operating System
System Locales: ["en-US"]
Regional Preferences: ["en-US"]
Flags: needinfo?(v)
Pushed by ebalazs@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ad2c33f95254
[Wayland] Wait with drawing until mozcontainer init is finished, r=jhorak
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/ad2c33f95254
Status: ASSIGNED → RESOLVED
Closed: 5 years ago5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
This one should be backported to beta (Firefox 65). Setting needinfo to me make the request.
Flags: needinfo?(stransky)
With this patch in place, when:

layers.acceleration.force-enabled=true
gfx.webrender.all=false

I find that the new Windows opened are frozen(UI not updating), and the initial window is also frozen.
With this patch in place, when:

layers.acceleration.force-enabled=true
gfx.webrender.all=true

I find that the new Windows opened are blank(grey), but the initial window is not frozen.
Yes I can see that - will look at it.
Flags: needinfo?(stransky)
Flags: needinfo?(stransky)
Comment on attachment 9030240 [details]
Bug 1485616 - [Wayland] Wait with drawing until mozcontainer init is finished, r=jhorak

[Beta/Release Uplift Approval Request]

Feature/Bug causing the regression: none

User impact if declined: Broken WebRender/OpenGL acceleration rendering under Linux/Wayland.

Is this code covered by automated tests?: No

Has the fix been verified in Nightly?: Yes

Needs manual test from QE?: No

If yes, steps to reproduce: 

List of other uplifts needed: None

Risk to taking this patch: Low

Why is the change risky/not risky? (and alternatives if risky): Wayland specific bug. Postpone rendering of nsWindow after actual wl_eg_window/wl_surface creation which ensures we're not missing any content, especially for popup windows.

String changes made/needed: none
Flags: needinfo?(stransky)
Attachment #9030240 - Flags: approval-mozilla-beta?
Comment on attachment 9030240 [details]
Bug 1485616 - [Wayland] Wait with drawing until mozcontainer init is finished, r=jhorak

[Triage Comment]
NPOTB fix for WebRender+Wayland users. Approved for 65.0b5.
Attachment #9030240 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: