Bug 1485616 - [Wayland] Wait with drawing until mozcontainer init is finished, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D14070

--HG--
extra : moz-landing-system : lando